# moss

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
L1 of optimal lrs by method 1 2/method 1/: modified_spec_vi_lr_elbo.py  optimal lr by method 1 var2 256.py  spec_vi_map.py
L1 of optimal lrs by method 1 2/method 2/: modified_lr_spec_vi_elbo.py  optimal lr by method 2 var2 256.py
est psd XYZ corr uncorr noise first 128Hz/: ET noise with GP XYZ first 128.py  ET noise with uncorr GP XYZ 128.py  modified_ll_128_spec_vi.py
est psd XYZ uncorr noise first 128Hz no cross/: ET noise with uncorr GP XYZ 128 no corss.py  modified_ll_128_spec_vi_no_cross.py
find the means/: find mu for ts lnls.py  modified_lnl_spec_vi_mu.py  true_var2_mu.py
src/moss/: spec_model.py  spec_model_chunked.py  spec_prep.py  spec_vi.py
studies/: ar_different_mu_simulation_study.py  sim_study.py  wind_demo.py
studies/data/: wind_detrend.csv
tests/: conftest.py  data_analysis_demo.py  simulation_study_demo.py  test_lnl.py  test_simulated_data.py
tests/data/: var_coefs.pkl  var_sim.py  varma_sim.py  wind_data_preprocess.py
